Fixed broken logging code and configuration Geronimo's logging config can be overriden with a file at var/log/log4j.xml
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45588 13f79535-47bb-0310-9956-ffa450edef68